Some more tests for renewal mailer.

--- a/app/views/user_mailer/renewal_reminder.text.plain.erb
+++ b/app/views/user_mailer/renewal_reminder.text.plain.erb
@@ -4,7 +4,7 @@ You are receiving this notice because you have <%= pluralize( @user.memberships.
 
 This information will be used by the appropriate authorities when they staff the committees after <% @deadline.to_s :us_ordinal %>.
 
-<% @user.memberships.ends_at_lt(@expiration).renewable.each do |membership| -%>
+<% @user.memberships.ends_at_lt(@expiration).renewable.current.each do |membership| -%>
  <% if membership.request && membership.request.ends_at < @expiration -%>
  * You are *not* interested in reappointment to <%= membership.request.requestable %> after your current membership ends on <%= membership.ends_at %>.[ Click here to update your existing request <<%= request_url membership.request %>> to change ]
  <% elsif membership.request -%>
