--- a/app/views/membership_mailer/join_notice.erb
+++ b/app/views/membership_mailer/join_notice.erb
@@ -1,3 +1,23 @@
-MembershipMailer#join_notice
+Dear <%= @membership.user.first_name %>,
 
-Find me in app/views/membership_mailer/join_notice.erb
+This notice is to inform you that you have been assigned a membership in <%= @membership.description %>, for a term starting at <%= @membership.starts_at.to_s :rfc822 %> and ending at <%= @membership.ends_at.to_s :rfc822 %>.
+
+<% if @membership.position.authority.join_notice -%>
+<%= @membership.position.authority.join_notice %>
+
+<% end -%>
+<% if @membership.position.join_notice -%>
+<%= @membership.position.join_notice %>
+
+<% end -%>
+<% if @membership.position.enrollments.length > 0 -%>
+Concurrent with your appointment to this position, you hold the following committee enrollment:
+<% @membership.position.enrollments.each do |enrollment| -%>
+<%= enrollment.title %> of <%= enrollment.committee %> with <%= pluralize enrollment.votes, 'vote' %>
+<% if enrollment.committee.join_message -%>
+<%= enrollment.committee.join_message %>
+<% end -%>
+
+<% end -%>
+<% end -%>
+
