Better default behavior for authority emails.  Clean up email generating code for renewal and join notices.

--- a/app/views/membership_mailer/join_notice.erb
+++ b/app/views/membership_mailer/join_notice.erb
@@ -21,3 +21,7 @@ Concurrent with your appointment to this position, you hold the following commit
 <% end -%>
 <% end -%>
 
+Best regards,
+
+<%= @membership.position.authority.effective_contact_name %>
+
