Basic functionality to create renewal notices for users.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,7 @@
 <li><%= link_to 'schedules', schedules_path %></li>
 <li><%= link_to 'quizzes', quizzes_path %></li>
 <li><%= link_to 'users', users_path %></li>
+<li><%= link_to 'user renewal notices', user_renewal_notices_path %></li>
 <% end %>
 <% else %>
 <%= link_to 'login', login_path %>
