--- a/app/views/sending_mailer/sending.text.html.erb
+++ b/app/views/sending_mailer/sending.text.html.erb
@@ -1,14 +1,14 @@
 <p>
-Dear <%= @user.first_name %>,
+Dear <%= @sending.user.first_name %>,
 </p>
 
 <p>
-You are receiving this notice because you have <%= pluralize( @user.memberships.ends_at_lt(@expiration).renewable.size, 'membership' ) %> ending soon and your action is required to renew your membership.  According to our records, your renewal preferences are as follows:
+You are receiving this notice because you have <%= pluralize( @sending.user.memberships.pending_renewal_within(@sending.message.starts_at, @sending.message.ends_at).length, 'membership' ) %> ending soon and your action is required to renew your membership.  According to our records, your renewal preferences are as follows:
 </p>
 
 <ul>
-<% @user.memberships.ends_at_lt( @expiration ).renewable.unrenewed.current.each do |membership| -%>
- <% if membership.request && membership.request.ends_at < @expiration -%>
+<% @sending.user.memberships.pending_renewal_within(@sending.message.starts_at, @sending.message.ends_at).each do |membership| -%>
+ <% if membership.request && membership.request.ends_at < membership.ends_at -%>
 <li>
 You are *not* interested in reappointment to <%= membership.request.requestable %> after your current membership ends on <%= membership.ends_at %>.
 </li>
@@ -27,7 +27,7 @@ You are *not* interested in reappointment to <%= membership.position.requestable
 </ul>
 
 <p>
-Please take a few moments before <% @deadline.to_s :long_ordinal %> to create or update membership requests for any of the committees or positions that you wish to renew so they reflect your preferences.  This information will be used by the appropriate authorities when they staff the committees after <% @deadline.to_s :long_ordinal %>.  You may <%= link_to 'make changes here', unrenewed_user_memberships_url( @user ) %>.
+Please take a few moments before <% @sending.message.deadline.to_s :long_ordinal %> to create or update membership requests for any of the committees or positions that you wish to renew so they reflect your preferences.  This information will be used by the appropriate authorities when they staff the committees.  You may <%= link_to 'make changes here', unrenewed_user_memberships_url( @sending.user ) %>.
 </p>
 
 <p>
