--- a/app/views/sending_mailer/sending.text.plain.erb
+++ b/app/views/sending_mailer/sending.text.plain.erb
@@ -4,12 +4,12 @@ You are receiving this notice because you have <%= pluralize( @sending.user.memb
 
 <% @sending.user.memberships.pending_renewal_within(@sending.message.starts_at, @sending.message.ends_at).each do |membership| -%>
  <% if membership.request && membership.request.ends_at <= membership.ends_at -%>
- * You are *not* interested in reappointment to <%= membership.request.requestable %> after your current membership ends on <%= membership.ends_at %>.
+ * You are *not* interested in reappointment to <%= membership.request.requestable %> after your current membership ends on <%= membership.ends_at.to_s :long_ordinal %>.
  <% elsif membership.request -%>
- * You are interested interested in reappointment to <%= membership.request.requestable %> from after your current membership ends on <%= membership.ends_at %> until <%= membership.request.ends_at %>.
+ * You are interested interested in reappointment to <%= membership.request.requestable %> from after your current membership ends on <%= membership.ends_at.to_s :long_ordinal %> until <%= membership.request.ends_at.to_s :long_ordinal %>.
  <% else -%>
  <% unless membership.position.requestables.empty? -%>
- * You are *not* interested in reappointment to <%= membership.position.requestables.join ', ' %> after your membership ends on <%= membership.ends_at %>.
+ * You are *not* interested in reappointment to <%= membership.position.requestables.join ', ' %> after your membership ends on <%= membership.ends_at.to_s :long_ordinal %>.
  <% end -%>
  <% end -%>
 <% end -%>
