--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -1,7 +1,11 @@
 <h2>Listing requests <%= @title %></h2>
 
+<%= will_paginate @requests %>
+
 <%= render :partial => "requests", :object => @requests,
-  :locals => { :requestable => @requestable, :user => (@requestable ? false : @user) } %>
+  :locals => { :requestable => @requestable, :user => (@requestable || @authority ? false : @user) } %>
+
+<%= will_paginate @requests %>
 
 <hr />
 
