--- a/app/views/authorities/show.html.erb
+++ b/app/views/authorities/show.html.erb
@@ -17,6 +17,7 @@
 <p>
 <%= link_to 'Edit', edit_authority_path(@authority) %> |
 <%= nested_index @authority, 'memberships', %w( past current future ) %> |
+<%= nested_index @authority, 'requests', %w( expired unexpired ) %> |
 <%= link_to 'Back', authorities_path %>
 </p>
 
