--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -52,7 +52,8 @@
 
 <p>
 <%= link_to 'Edit', edit_user_path(@user) %> |
-<%= nested_index @user, 'memberships', %w( past current future ) %> |
+<%= nested_index @user, 'memberships', %w( past current future renewed unrenewed ) %> |
+<%= nested_index @user, 'requests', %w( expired unexpired ) %> |
 <%= nested_index @user, 'enrollments' %> |
 <%= link_to 'Back', users_path %>
 </p>
