--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -17,6 +17,10 @@ You have <%= link_to pluralize( current_user.memberships.current.length, 'curren
 You have <%= link_to pluralize( current_user.requests.unexpired.length, 'current request' ), unexpired_user_requests_path( current_user ) %> and <%= link_to pluralize( current_user.requests.expired.size, 'expired request' ), expired_user_requests_path( current_user ) %>.
 </p>
 
+<p>
+You may browse <%= link_to pluralize( current_user.requestable_committees.size, 'committee' ), requestable_user_committees_path( current_user ) %> and <%= link_to pluralize( current_user.requestable_positions.size, 'position' ), requestable_user_positions_path( current_user ) %> positions for which you are eligible to request membership.
+</p>
+
 <% if current_user.requests.unexpired.length > 0 %>
 <h4>Current Requests</h4>
 <%= render :partial => 'requests/requests', :object => current_user.requests.unexpired,
