--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Editing request for <%=h @request.requestable %></h2>
+<h2>Editing request of <%=h @request.user.name %> for <%=h @request.requestable %></h2>
 
 <% semantic_form_for(@request, :html => { :multipart => true }) do |f| %>
   <%= render :partial => 'form', :object => f %>
