Control display of management functions based on user permissions.

--- a/app/views/authorities/index.html.erb
+++ b/app/views/authorities/index.html.erb
@@ -14,6 +14,8 @@
 <hr />
 
 <p>
+<% if permitted_to? :create, :authorities -%>
 <%= link_to 'New authority', new_authority_path %>
+<% end -%>
 </p>
 
