--- a/app/views/qualifications/_qualification.html.erb
+++ b/app/views/qualifications/_qualification.html.erb
@@ -2,7 +2,7 @@
     <td><%=h qualification.name %></td>
     <td><%=h qualification.description %></td>
     <td><%= link_to 'Show', qualification %></td>
-    <td><%= link_to 'Edit', edit_qualification_path(qualification) %></td>
-    <td><%= link_to 'Destroy', qualification, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to( 'Edit', edit_qualification_path(qualification) ) if permitted_to? :edit, qualification %></td>
+    <td><%= link_to( 'Destroy', qualification, :confirm => 'Are you sure?', :method => :delete ) if permitted_to? :destroy, qualification %></td>
   <% end %>
 
