--- a/app/views/authorities/_authority.html.erb
+++ b/app/views/authorities/_authority.html.erb
@@ -1,7 +1,7 @@
   <% table_row_tag do %>
     <td><%=h authority.name %></td>
     <td><%= link_to 'Show', authority %></td>
-    <td><%= link_to 'Edit', edit_authority_path(authority) %></td>
-    <td><%= link_to 'Destroy', authority, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to( 'Edit', edit_authority_path(authority) ) if permitted_to? :edit, authority %></td>
+    <td><%= link_to( 'Destroy', authority, :confirm => 'Are you sure?', :method => :delete ) if permitted_to? :destroy, authority %></td>
   <% end %>
 
