--- a/app/views/authorities/show.html.erb
+++ b/app/views/authorities/show.html.erb
@@ -15,7 +15,9 @@
 <%=markdown @authority.leave_message %>
 
 <p>
+<% if permitted_to? :edit, @authority -%>
 <%= link_to 'Edit', edit_authority_path(@authority) %> |
+<% end -%>
 <%= nested_index @authority, 'memberships', %w( past current future ) %> |
 <%= nested_index @authority, 'requests', %w( expired unexpired ) %> |
 <%= link_to 'Back', authorities_path %>
