--- a/app/views/enrollments/show.html.erb
+++ b/app/views/enrollments/show.html.erb
@@ -15,7 +15,9 @@
 </p>
 
 <p>
+<% if permitted_to? :edit, @enrollment -%>
 <%= link_to 'Edit', edit_enrollment_path(@enrollment) %> |
+<% end -%>
 <%= link_to 'Back', committee_enrollments_path(@enrollment.committee) %>
 </p>
 
