--- a/app/views/periods/show.html.erb
+++ b/app/views/periods/show.html.erb
@@ -11,7 +11,9 @@
 </p>
 
 <p>
+<% if permitted_to? :edit, @period -%>
 <%= link_to 'Edit', edit_period_path(@period) %> |
+<% end -%>
 <%= link_to 'Back', schedule_periods_path(@period.schedule) %>
 </p>
 
