--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -44,7 +44,9 @@
 <%=markdown @position.leave_message %>
 
 <p>
+<% if permitted_to? :edit, @position -%>
 <%= link_to 'Edit', edit_position_path(@position) %> |
+<% end -%>
 <%= link_to 'List Memberships', position_memberships_path(@position) %> |
 <%= link_to 'List Requests', position_requests_path(@position) %> |
 <%= link_to 'Back', positions_path %>
