--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -25,7 +25,9 @@
 <% end %>
 
 <p>
+<% if permitted_to? :edit, @question %>
 <%= link_to 'Edit', edit_question_path(@question) %> |
+<% end %>
 <%= link_to 'Back', questions_path %>
 </p>
 
