--- a/app/views/schedules/show.html.erb
+++ b/app/views/schedules/show.html.erb
@@ -3,7 +3,9 @@
 </p>
 
 <p>
+<% if permitted_to? :edit, @schedule -%>
 <%= link_to 'Edit', edit_schedule_path(@schedule) %> |
+<% end %>
 <%= link_to 'List Periods', schedule_periods_path(@schedule) %> |
 <%= link_to 'Back', schedules_path %>
 </p>
