--- a/app/views/sendings/index.html.erb
+++ b/app/views/sendings/index.html.erb
@@ -11,12 +11,11 @@
     <td><%=h sending.user %></td>
     <td><%=h sending.message %></td>
     <td><%= link_to 'Show', sending %></td>
-    <td><%= link_to 'Edit', edit_sending_path(sending) %></td>
-    <td><%= link_to 'Destroy', sending, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= link_to( 'Edit', edit_sending_path(sending) ) if permitted_to? :edit, sending %></td>
+    <td><%= link_to( 'Destroy', sending, :confirm => 'Are you sure?', :method => :delete ) if permitted_to? :destroy, sending %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New sending', new_sending_path %>
