Include sending count information.

--- a/app/views/user_renewal_notices/_notices.html.erb
+++ b/app/views/user_renewal_notices/_notices.html.erb
@@ -5,6 +5,8 @@
     <th>Ends at</th>
     <th>Deadline</th>
     <th>Authority</th>
+    <th>Incomplete Sendings</th>
+    <th>Complete Sendings</th>
   </tr>
 </thead>
 <tbody>
