--- a/app/views/memberships/_memberships.html.erb
+++ b/app/views/memberships/_memberships.html.erb
@@ -21,6 +21,7 @@
     <th>Period</th>
     <th>Starts at</th>
     <th>Ends at</th>
+    <th>Request Renewal Until</th>
   </tr>
   </thead>
   <tbody>
