Should not display renewal link for a membership that does not match the current user.

--- a/app/views/sending_mailer/sending.text.plain.erb
+++ b/app/views/sending_mailer/sending.text.plain.erb
@@ -16,7 +16,7 @@ You are receiving this notice because you have <%= pluralize( @sending.user.memb
  <% end -%>
 <% end -%>
 
-Please take a few moments before <% @sending.message.deadline.to_s :long_ordinal %> to create or update membership requests for any of the committees or positions that you wish to renew so they reflect your preferences.  This information will be used by the appropriate authorities when they staff the committees.  You may make changes here:
+Please take a few moments before <%= @sending.message.deadline.to_s :long_ordinal %> to create or update membership requests for any of the committees or positions that you wish to renew so they reflect your preferences.  This information will be used by the appropriate authorities when they staff the committees.  You may make changes here:
 
 <%= unrenewed_user_memberships_url @sending.user %>
 
