Allow user to have multiple statuses using same binary mask technique as for positions.  Fix bug so requests listed for authority are limited according to eligibility based on status.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -13,7 +13,7 @@
     <% if permitted_to? :manage, form.object %>
       <%= form.input :net_id %>
       <%= form.input :admin, :as => :radio, :label => 'Administrator?' %>
-      <%= form.input :status, :as => :select, :collection => User::STATUSES %>
+      <%= form.input :statuses, :as => :check_boxes, :collection => User::STATUSES %>
     <% end %>
   <% end %>
   <%= form.buttons %>
