--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -21,7 +21,7 @@
     <th>Home phone</th>
     <th>Work address</th>
     <th>Date of birth</th>
-    <th>Status</th>
+    <th>Statuses</th>
   </tr>
   </thead>
   <tbody>
