--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,7 +43,7 @@
 </p>
 
 <p>
-  <b>Status:</b> <%=h @user.status.blank? ? 'unknown' : @user.status %>
+  <b>Statuses:</b> <%= @user.statuses.empty? ? 'unknown' : @user.statuses.join( ', ' ) %>
 </p>
 
 <p>
