Complete UI and tests for confirming a membership.

--- a/app/views/memberships/_memberships.html.erb
+++ b/app/views/memberships/_memberships.html.erb
@@ -21,7 +21,8 @@
     <th>Period</th>
     <th>Starts at</th>
     <th>Ends at</th>
-    <th>Request Renewal Until</th>
+    <th>Renew Until</th>
+    <th>Confirmed?</th>
   </tr>
   </thead>
   <tbody>
