--- a/app/views/memberships/_membership.html.erb
+++ b/app/views/memberships/_membership.html.erb
@@ -17,7 +17,9 @@
     <td><%=h membership.period %></td>
     <td><%=h membership.starts_at.to_s :rfc822 %></td>
     <td><%=h membership.ends_at.to_s :rfc822 %></td>
-    <td><%= membership.request_renewal_until ? membership.request_renewal_until.to_s( :rfc822 ) : "" %></td>
+    <td><%= membership.renew_until ? membership.renew_until.to_s( :rfc822 ) : "" %></td>
+    <td><%= membership.confirmed? ? 'Yes' : 'No' %></td>
+    <td><%= link_to( 'Confirm', confirm_membership_path( membership ) ) if permitted_to?( :confirm, membership ) && membership.unconfirmed?%></td>
     <td><%= link_to 'Show', membership %></td>
     <td><%= link_to_renewal membership %></td>
     <td><%= link_to( 'Edit', edit_membership_path(membership) ) if permitted_to? :edit, membership %></td>
