Fix link for confirmation to use correct method. Only send notice about renewals to users with unconfirmed memberships.

--- a/app/views/memberships/_membership.html.erb
+++ b/app/views/memberships/_membership.html.erb
@@ -19,7 +19,7 @@
     <td><%=h membership.ends_at.to_s :rfc822 %></td>
     <td><%= membership.renew_until ? membership.renew_until.to_s( :rfc822 ) : "" %></td>
     <td><%= membership.confirmed? ? 'Yes' : 'No' %></td>
-    <td><%= link_to( 'Confirm', confirm_membership_path( membership ) ) if permitted_to?( :confirm, membership ) && membership.unconfirmed?%></td>
+    <td><%= link_to( 'Confirm', confirm_membership_path( membership ), :method => :put ) if permitted_to?( :confirm, membership ) && membership.unconfirmed?%></td>
     <td><%= link_to 'Show', membership %></td>
     <td><%= link_to_renewal membership %></td>
     <td><%= link_to( 'Edit', edit_membership_path(membership) ) if permitted_to? :edit, membership %></td>
